fix: add flex wrap to listProducts

--- a/src/components/listProducts/style.css
+++ b/src/components/listProducts/style.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 1rem;
   align-items: center;
+  flex-wrap: wrap;
 }
 .productCard {
   display: flex;
